--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-99852695-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 <body>
 <header>
@@ -25,15 +40,29 @@
     <div id="download-button" class="tool-button">
         <img width="100%" height="100%" src="res/download.svg"/>
     </div>
-    <div id="lines-button" class="tool-button">
-        <h1>L</h1>
+    <div id="lines-tool" class="tool">
+        <div id="lines-button" class="tool-button">
+            <h1>L</h1>
+        </div>
+        <div id="lines-label" class="tool-label"><h1>lines</h1></div>
+        <div id="lines-panel" class="tool-panel">
+            <h4>amount:</h4>
+            <input id="lines-amount-range" type="range" min="1" max="10">
+            <h5 id="lines-amount-count">6</h5>
+            <div id="lines-execute" class="tool-execute">Execute</div>
+        </div>
     </div>
-    <div id="lines-label" class="tool-label"><h1>lines</h1></div>
-    <div id="lines-panel" class="tool-panel">
-        <h4>amount:</h4>
-        <input id="lines-amount-range" type="range" min="1" max="10">
-        <h5 id="lines-amount-count">6</h5>
-        <div id="lines-execute" class="tool-execute">Execute</div>
+    <div id="circles-tool" class="tool">
+        <div id="circles-button" class="tool-button">
+            <h1>C</h1>
+        </div>
+        <div id="circles-label" class="tool-label"><h1>circles</h1></div>
+        <div id="circles-panel" class="tool-panel">
+            <h4>amount:</h4>
+            <input id="circles-amount-range" type="range" min="1" max="10">
+            <h5 id="circles-amount-count">6</h5>
+            <div id="circles-execute" class="tool-execute">Execute</div>
+        </div>
     </div>
 </div>
 <div id="kernel-panel">
